// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`compileFromFile compileFromFile should hoist named definitions reached through an external file $ref (#143) 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export type Currency = "USD" | "EUR";
export type ArrayOfSingle = Single[];

export interface Single {
  cost?: Money;
  [k: string]: unknown;
}
export interface Money {
  currency?: Currency;
  [k: string]: unknown;
}
"
`;

exports[`compileFromFile compileFromFile should resolve refs from cwd option 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Referencing {
  foo: ExampleSchema;
}
export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`compileFromFile compileFromFile should resolve refs from cwd option as yml 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Referencing {
  foo: ExampleSchema;
}
export interface ExampleSchema {
  firstName: string;
  lastName: string;
  /**
   * Age in years
   */
  age?: number;
  height?: number;
  favoriteFoods?: unknown[];
  likesDogs?: boolean;
  [k: string]: unknown;
}
"
`;

exports[`compileFromFile compileFromFile should default cwd to the schema directory when no options are passed 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export type Other = string;

export interface Foo {
  bar?: Other;
  [k: string]: unknown;
}
"
`;

exports[`compileFromFile compileFromFile should default cwd to the schema directory when options is an empty object 1`] = `
"/* eslint-disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export type Other = string;

export interface Foo {
  bar?: Other;
  [k: string]: unknown;
}
"
`;
